--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@ function updateCharacterCount(inputId, counterId, maxLength) {
 
     input.on('input', () => {
         const length = input.val().length;
-        counter.text(`${length}/${maxLength}`);
+        counter.text(`残り${maxLength - length}`);
 
         if (length > maxLength) {
             counter.addClass('error');
@@ -160,7 +160,7 @@ function canEditPost(post) {
 }
 
 // 投稿のHTML要素を生成
-// 　バグ入りなので要修正（編集・削除機能表示判定が誤っている）
+// 　バグ入りなので要修正（編集・削除機能表示判定が誤っている）修正済み
 function createPostElement(post) {
     // 編集権限を確認
     const canEdit = canEditPost(post);
